--- a/bundle/Resources/views/js_config.html.twig
+++ b/bundle/Resources/views/js_config.html.twig
@@ -13,6 +13,9 @@
             'browse_select_tag': "{{ "ngrm.edit.vue.browse.facets.select_tag"|trans }}",
             'browse_loading_tags': "{{ "ngrm.edit.vue.browse.facets.loading_tags"|trans }}",
             'browse_all_tags': "{{ "ngrm.edit.vue.browse.facets.all_tags"|trans }}",
+            'browse_select_visibility': "{{ "ngrm.edit.vue.browse.facets.select_visibility"|trans }}",
+            'browse_loading_visibilities': "{{ "ngrm.edit.vue.browse.facets.loading_visibilities"|trans }}",
+            'browse_all_visibilities': "{{ "ngrm.edit.vue.browse.facets.all_visibilities"|trans }}",
             'search': "{{ "ngrm.edit.vue.browse.facets.search"|trans }}",
             'search_placeholder': "{{ "ngrm.edit.vue.browse.facets.search_placeholder"|trans }}",
             'browse_empty_folder': "{{ "ngrm.edit.vue.browse.empty_folder"|trans }}",
