--- a/bundle/Resources/views/parts/edit/editor_insert.html.twig
+++ b/bundle/Resources/views/parts/edit/editor_insert.html.twig
@@ -26,7 +26,12 @@
     };
 
     NgRemoteMediaOptions_{{ field_id }} = {
-        allowedVisibility: []
+        allowedVisibilities: [],
+        allowedTypes: [],
+        allowedTags: [],
+        parentFolder: "",
+        folder: "",
+        uploadContext: {}
     };
 
     {% set available_variations = ngrm_available_variations('embedded', true) %}
