NGGW-41 Finish implementing form options and context

--- a/bundle/Resources/views/js_config.html.twig
+++ b/bundle/Resources/views/js_config.html.twig
@@ -79,6 +79,7 @@
             'upload_checkbox_overwrite': "{{ "ngrm.edit.vue.upload.checkbox.overwrite"|trans }}",
             'upload_placeholder_new_folder': "{{ "ngrm.edit.vue.upload.placeholder.new_folder"|trans }}",
             'upload_error_existing_resource': "{{ "ngrm.edit.vue.upload.error.existing_resource"|trans }}",
+            'upload_error_unsupported_resource_type': "{{ "ngrm.edit.vue.upload.error.unsupported_resource_type"|trans }}",
         };
     }
 
