--- a/bundle/Resources/views/parts/edit/editor_insert.html.twig
+++ b/bundle/Resources/views/parts/edit/editor_insert.html.twig
@@ -29,8 +29,8 @@
         allowedVisibilities: [],
         allowedTypes: [],
         allowedTags: [],
-        parentFolder: "",
-        folder: "",
+        parentFolder: null,
+        folder: null,
         uploadContext: {}
     };
 
