NGGW-41 Implement location source

--- a/bundle/Resources/views/form/remote_media_type.html.twig
+++ b/bundle/Resources/views/form/remote_media_type.html.twig
@@ -52,6 +52,7 @@
     </script>
 
     {{ form_widget(form.locationId) }}
+    {{ form_widget(form.source) }}
 
     <div class="ngremotemedia-container" data-id="{{ field_id }}" v-init:selected-image="NgRemoteMediaSelectedImage" v-init:config="NgRemoteMediaConfig">
         <interactions
