--- a/frontend/src/scss/ngremotemedia.scss
+++ b/frontend/src/scss/ngremotemedia.scss
@@ -228,12 +228,15 @@
   .ngremotemedia-local-file.btn.upload-from-disk {
     border-radius: 4px;
     text-align: center;
-    font-size: 14px;
+    font-size: 14px!important;
     line-height: 18px;
     padding: 8px 16px;
     border: 1px solid $mercury;
     background: #F1F4FA;
     cursor: pointer;
+    color: $mine-shaft;
+    font-weight: 400;
+    font-family: Arial, Helvetica, sans-serif;
   }
 
   .ngremotemedia-local-file.btn.upload-from-disk {
