--- a/bundle/Resources/views/app/interactions.html.twig
+++ b/bundle/Resources/views/app/interactions.html.twig
@@ -116,14 +116,26 @@
     'uploadContext': upload_context
 } %}
 
+{% set browse_url = '' %}
+{% set preview_url = '' %}
+{% if location %}
+    {% if location.remoteResource.type == 'image' %}
+        {% set browse_url = ngrm_remote_resource_variation(location, 'ngrm_interface', 'browse').url %}
+        {% set preview_url = ngrm_remote_resource_variation(location, 'ngrm_interface', 'preview').url %}
+    {% elseif location.remoteResource.type == 'video' %}
+        {% set browse_url = ngrm_video_thumbnail_variation(location, 'ngrm_interface', 'browse').url %}
+        {% set preview_url = ngrm_video_thumbnail_variation(location, 'ngrm_interface', 'preview').url %}
+    {% endif %}
+{% endif %}
+
 {% set selected_image = {
     'id': location and location.remoteResource.remoteId ? location.remoteResource.remoteId : '',
     'name': location and location.remoteResource.name ? location.remoteResource.name : '',
     'type': location and location.remoteResource.type ? location.remoteResource.type : '',
     'format': location and location.remoteResource.metadata.format is defined ? location.remoteResource.metadata.format : '',
     'url': location and location.remoteResource.url ? location.remoteResource.url : '',
-    'browseUrl': location ? ngrm_remote_resource_variation(location, 'ngrm_interface', 'browse').url : '',
-    'previewUrl': location ? ngrm_remote_resource_variation(location, 'ngrm_interface', 'preview').url : '',
+    'browseUrl': browse_url,
+    'previewUrl': preview_url,
     'alternateText': location and location.remoteResource.altText ? location.remoteResource.altText : '',
     'tags': location ? location.remoteResource.tags : [],
     'size': location ? location.remoteResource.size : 0,
