NGSTACK-760 Create form type for selecting remote media folder

--- a/frontend/src/scss/ngremotemedia.scss
+++ b/frontend/src/scss/ngremotemedia.scss
@@ -8,7 +8,7 @@
 
 @import './iconfont';
 
-.ngremotemedia-container {
+.ngremotemedia-container, .ngremotemedia-select-folder-container {
   @import './variables';
 
   box-sizing: border-box;
