--- a/bundle/Resources/views/ezadminui/js_config.html.twig
+++ b/bundle/Resources/views/ezadminui/js_config.html.twig
@@ -15,6 +15,8 @@
             'browse_select_tag': "{{ "ngrm.edit.vue.browse.facets.select_tag"|trans }}",
             'browse_loading_tags': "{{ "ngrm.edit.vue.browse.facets.loading_tags"|trans }}",
             'browse_all_tags': "{{ "ngrm.edit.vue.browse.facets.all_tags"|trans }}",
+            'browse_metadata_fields': "{{ "ngrm.edit.vue.browse.facets.metadata_fields"|trans }}",
+            'browse_all_metadata_fields': "{{ "ngrm.edit.vue.browse.facets.all_metadata_fields"|trans }}",
             'search': "{{ "ngrm.edit.vue.browse.facets.search"|trans }}",
             'search_placeholder': "{{ "ngrm.edit.vue.browse.facets.search_placeholder"|trans }}",
             'browse_empty_folder': "{{ "ngrm.edit.vue.browse.empty_folder"|trans }}",
