NGSTACK-760 Add missing translations

--- a/bundle/Resources/views/app/interactions.html.twig
+++ b/bundle/Resources/views/app/interactions.html.twig
@@ -48,6 +48,7 @@
         'browse_empty_folder_hint': 'ngrm.edit.vue.browse.empty_folder_hint'|trans,
         'browse_select': 'ngrm.edit.vue.browse.select'|trans,
         'load_more': 'ngrm.edit.vue.browse.load_more'|trans,
+        'crop_modal_title': 'ngrm.edit.vue.crop.modal_title'|trans,
         'crop_reset': 'ngrm.edit.vue.crop.reset'|trans,
         'crop_apply': 'ngrm.edit.vue.crop.apply'|trans,
         'crop_cancel': 'ngrm.edit.vue.crop.cancel'|trans,
@@ -95,6 +96,7 @@
         'preview_alternate_text': 'ngrm.edit.vue.preview.alternate_text'|trans,
         'preview_tags': 'ngrm.edit.vue.preview.tags'|trans,
         'preview_size': 'ngrm.edit.vue.preview.size'|trans,
+        'upload_modal_title': 'ngrm.edit.vue.upload.modal_title'|trans,
         'upload_breadcrumbs_info': 'ngrm.edit.vue.upload.breadcrumbs_info'|trans,
         'upload_root_folder': 'ngrm.edit.vue.upload.root_folder'|trans,
         'upload_info_text': 'ngrm.edit.vue.upload.info_text'|trans,
