NGSTACK-760 Implement caption

--- a/bundle/Resources/views/app/interactions.html.twig
+++ b/bundle/Resources/views/app/interactions.html.twig
@@ -94,6 +94,7 @@
         'interactions_manage_media': 'ngrm.edit.vue.interactions.manage_media'|trans,
         'interactions_quick_upload': 'ngrm.edit.vue.interactions.quick_upload'|trans,
         'preview_alternate_text': 'ngrm.edit.vue.preview.alternate_text'|trans,
+        'preview_caption': 'ngrm.edit.vue.preview.caption'|trans,
         'preview_tags': 'ngrm.edit.vue.preview.tags'|trans,
         'preview_size': 'ngrm.edit.vue.preview.size'|trans,
         'upload_modal_title': 'ngrm.edit.vue.upload.modal_title'|trans,
@@ -141,6 +142,7 @@
     'browseUrl': browse_url,
     'previewUrl': preview_url,
     'alternateText': location and location.remoteResource.altText ? location.remoteResource.altText : '',
+    'caption': location and location.remoteResource.caption ? location.remoteResource.caption : '',
     'tags': location ? location.remoteResource.tags : [],
     'size': location ? location.remoteResource.size : 0,
     'variations': '%VARIATION_SETTINGS%',
