--- a/frontend/src/scss/ngremotemedia.scss
+++ b/frontend/src/scss/ngremotemedia.scss
@@ -79,7 +79,7 @@
       color: #737373;
     }
 
-    input.media-alttext {
+    input.media-alttext, input.media-caption {
       width: 100%;
       border-radius: 0;
       border: 1px solid #e4e4e4;
