NGSTACK-760 Add info regardig fields that are updating resource in the cloud directly

--- a/bundle/Resources/views/app/interactions.html.twig
+++ b/bundle/Resources/views/app/interactions.html.twig
@@ -94,8 +94,11 @@
         'interactions_manage_media': 'ngrm.edit.vue.interactions.manage_media'|trans,
         'interactions_quick_upload': 'ngrm.edit.vue.interactions.quick_upload'|trans,
         'preview_alternate_text': 'ngrm.edit.vue.preview.alternate_text'|trans,
+        'preview_alternate_text_info': 'ngrm.edit.vue.preview.alternate_text_info'|trans,
         'preview_caption': 'ngrm.edit.vue.preview.caption'|trans,
+        'preview_caption_info': 'ngrm.edit.vue.preview.caption_info'|trans,
         'preview_tags': 'ngrm.edit.vue.preview.tags'|trans,
+        'preview_tags_info': 'ngrm.edit.vue.preview.tags_info'|trans,
         'preview_size': 'ngrm.edit.vue.preview.size'|trans,
         'upload_modal_title': 'ngrm.edit.vue.upload.modal_title'|trans,
         'upload_breadcrumbs_info': 'ngrm.edit.vue.upload.breadcrumbs_info'|trans,
