NGSTACK-760 Implement watermark text in admin interface

--- a/bundle/Resources/views/app/interactions.html.twig
+++ b/bundle/Resources/views/app/interactions.html.twig
@@ -99,6 +99,8 @@
         'preview_caption_info': 'ngrm.edit.vue.preview.caption_info'|trans,
         'preview_tags': 'ngrm.edit.vue.preview.tags'|trans,
         'preview_tags_info': 'ngrm.edit.vue.preview.tags_info'|trans,
+        'preview_watermark_text': 'ngrm.edit.vue.preview.watermark_text'|trans,
+        'preview_watermark_text_info': 'ngrm.edit.vue.preview.watermark_text_info'|trans,
         'preview_size': 'ngrm.edit.vue.preview.size'|trans,
         'upload_modal_title': 'ngrm.edit.vue.upload.modal_title'|trans,
         'upload_breadcrumbs_info': 'ngrm.edit.vue.upload.breadcrumbs_info'|trans,
@@ -146,6 +148,7 @@
     'previewUrl': preview_url,
     'alternateText': location and location.remoteResource.altText ? location.remoteResource.altText : '',
     'caption': location and location.remoteResource.caption ? location.remoteResource.caption : '',
+    'watermarkText': location and location.watermarkText ? location.watermarkText : '',
     'tags': location ? location.remoteResource.tags : [],
     'size': location ? location.remoteResource.size : 0,
     'variations': '%VARIATION_SETTINGS%',
