--- a/frontend/src/scss/ngremotemedia.scss
+++ b/frontend/src/scss/ngremotemedia.scss
@@ -140,7 +140,7 @@
       color: #737373;
     }
 
-    input.media-alttext, input.media-caption {
+    input.media-alttext, input.media-caption, input.media-watermarktext {
       width: 100%;
       border-radius: 0;
       border: 1px solid #e4e4e4;
