NGSTACK-760 Add missing translations

--- a/bundle/Resources/views/app/select_folder.html.twig
+++ b/bundle/Resources/views/app/select_folder.html.twig
@@ -10,6 +10,8 @@
         'create_folder': path('netgen_remote_media_ajax_folder_create'),
     },
     'translations': {
+        'select_folder_interaction_button': 'ngrm.edit.vue.select_folder_interaction.button'|trans,
+        'select_folder_interaction_empty': 'ngrm.edit.vue.select_folder_interaction.empty'|trans,
         'upload_breadcrumbs_info': 'ngrm.edit.vue.upload.breadcrumbs_info'|trans,
         'upload_root_folder': 'ngrm.edit.vue.upload.root_folder'|trans,
         'upload_info_text': 'ngrm.edit.vue.upload.info_text'|trans,
