--- a/bundle/Resources/views/ezadminui/parts/edit/ngrm_field.html.twig
+++ b/bundle/Resources/views/ezadminui/parts/edit/ngrm_field.html.twig
@@ -1,4 +1,15 @@
-{% include '@NetgenRemoteMedia/ezadminui/js_config.html.twig' %}
+{% include '@NetgenRemoteMedia/ezadminui/js_config.html.twig' with {content_type_identifier: content_type_identifier} %}
+
+{% set parent_folder = null %}
+
+{% if ezpublish.configResolver.hasParameter('content_type.parent_folder', 'netgen_remote_media') %}
+    {% set parent_folder_config = ezpublish.configResolver.parameter('content_type.parent_folder', 'netgen_remote_media') %}
+    {% if content_type_identifier is defined and parent_folder_config[content_type_identifier] is defined %}
+        {% set parent_folder = parent_folder_config[content_type_identifier] %}
+    {% else %}
+        {% set parent_folder = parent_folder_config['default'] ?? null %}
+    {% endif %}
+{% endif %}
 
 <script type="text/javascript">
     NgRemoteMediaSelectedImage_{{ field_id }} = {
@@ -36,6 +47,12 @@
 
     NgRemoteMediaAvailableVariations_{{ field_id }} = {{ available_variations|scaling_format|json_encode|raw }};
     NgRemoteMediaAvailableEditorVariations_{{ field_id }} = {{ available_editor_variations|keys|json_encode|raw }};
+    NgRemoteMediaFolderConfig_{{ field_id }} = {
+      'parentFolder': {
+        'id': '{{ parent_folder }}',
+        'label': '{{ parent_folder }}',
+      }
+    }
 </script>
 
 <div class="ngremotemedia-type" data-id="{{ field_id }}" v-init:selected-image="NgRemoteMediaSelectedImage" v-init:config="NgRemoteMediaConfig">
