--- a/bundle/Resources/views/form/remote_media_type.html.twig
+++ b/bundle/Resources/views/form/remote_media_type.html.twig
@@ -37,6 +37,7 @@
         'parent_folder': form.vars.parent_folder,
         'folder': form.vars.folder,
         'upload_context': form.vars.upload_context|default([]),
-        'disable_upload': form.vars.disable_upload|default(false)
+        'disable_upload': form.vars.disable_upload|default(false),
+        'hide_filename': form.vars.hide_filename|default(false)
     } %}
 {% endblock %}
