SPLAT-1442 [wip] handle customizable template, add css class and variation selection

--- a/frontend/src/scss/ngremotemedia.scss
+++ b/frontend/src/scss/ngremotemedia.scss
@@ -143,7 +143,7 @@
       color: #737373;
     }
 
-    input.media-alttext, input.media-caption, input.media-watermarktext {
+    input.media-alttext, input.media-caption, input.media-watermarktext, input.media-css-class {
       width: 100%;
       border-radius: 0;
       border: 1px solid #e4e4e4;
