SPLAT-1442 change text

--- a/bundle/Resources/views/app/view_resource.html.twig
+++ b/bundle/Resources/views/app/view_resource.html.twig
@@ -11,5 +11,5 @@
     {% endif %}
     </div>
 {% else %}
-    <div class="ngremotemedia-error">Invalid image data</div>
+    <div class="ngremotemedia-error">Invalid data</div>
 {% endif %}
