--- a/bundle/Resources/views/app/interactions.html.twig
+++ b/bundle/Resources/views/app/interactions.html.twig
@@ -137,8 +137,13 @@
 
     {% if location.remoteResource.protected %}
         {% set authenticated_location = ngrm_authenticate_remote_resource_location(location, 600) %}
-        {% set browse_variation_name = 'browse_protected' %}
-        {% set preview_variation_name = 'preview_protected' %}
+        {% set browse_variation_name = browse_variation_name ~ '_protected' %}
+        {% set preview_variation_name = preview_variation_name ~ '_protected' %}
+    {% endif %}
+
+    {% if location.remoteResource.type == 'image' %}
+        {% set browse_variation_name = browse_variation_name ~ '_image' %}
+        {% set preview_variation_name = preview_variation_name ~ '_image' %}
     {% endif %}
 
     {% if location.remoteResource.type == 'image' %}
@@ -146,7 +151,7 @@
         {% set preview_url = ngrm_remote_resource_variation(authenticated_location, 'ngrm_interface', preview_variation_name).url %}
     {% elseif location.remoteResource.type == 'video' %}
         {% set browse_url = ngrm_video_thumbnail_variation(authenticated_location, 'ngrm_interface', browse_variation_name).url %}
-        {% set preview_url = ngrm_video_thumbnail_variation(authenticated_location, 'ngrm_interface', preview_variation_name).url %}
+        {% set preview_url = ngrm_remote_resource_variation(authenticated_location, 'ngrm_interface', preview_variation_name).url %}
     {% endif %}
 {% endif %}
 
